# flask-apispec

./: .codecov.yml  .gitignore  .secrets.baseline  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.rst  dev-requirements.txt  package-lock.json  package.json  pyproject.toml  pytest.ini  setup.cfg  setup.py  tasks.py  tox.ini
.github/workflows/: ci.yaml  sast.yaml  workflow.yml
docs/: api_reference.rst  conf.py  index.rst  install.rst  requirements.txt  usage.rst
examples/: petstore.py  petstore_blueprint.py
flask_apispec/: __init__.py  annotations.py  apidoc.py  blueprint.py  extension.py  paths.py  utils.py  views.py  wrapper.py
flask_apispec/templates/: swagger-ui.html
flask_smore/: __init__.py  apidoc.py  extension.py  paths.py  utils.py  views.py
tests/: conftest.py  fixtures.py  test_extension.py  test_openapi.py  test_paths.py  test_swagger.py  test_utils.py  test_views.py
